cf_analysis_results/checkerframework_3.42.0_results_WPI/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8.txt
../dataset/june2020_dataset/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/Util.java:31: error: (required.method.not.called) $$ 4 $$ method close $$ Prologue.class.getResourceAsStream(s) $$ java.io.InputStream $$ regular method exit $$ ( 852, 889 ) $$ @MustCall method close may not have been invoked on Prologue.class.getResourceAsStream(s) or any of its aliases.
            BufferedReader br = new BufferedReader(new InputStreamReader(Prologue.class.getResourceAsStream(s)));
                                                                                                           ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/FileCharStream.java:7: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(filename) $$ java.io.FileReader $$ regular method exit $$ ( 213, 237 ) $$ @MustCall method close may not have been invoked on new FileReader(filename) or any of its aliases.
        _reader = new BufferedReader(new FileReader(filename));
                                     ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/ConsoleCharStream.java:21: error: (required.method.not.called) $$ 4 $$ method close $$ reader() $$ java.io.BufferedReader $$ regular method exit $$ ( 511, 519 ) $$ @MustCall method close may not have been invoked on reader() or any of its aliases.
            return reader().readLine();
                         ^
  The type of object is: java.io.BufferedReader.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url82787aa7a4_vrthra_v_language_tgz-pJ8-v_VJ8/src/v/ConsoleCharStream.java:42: error: (required.method.not.called) $$ 4 $$ method close $$ reader() $$ java.io.BufferedReader $$ regular method exit $$ ( 969, 977 ) $$ @MustCall method close may not have been invoked on reader() or any of its aliases.
            String out = reader().readLine();
                               ^
  The type of object is: java.io.BufferedReader.
  Reason for going out of scope: regular method exit
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
